[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uploade"
version = "1.5.0"
description = "Collective memory for AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://testsx.com"
